@@ -56,6 +56,8 @@ import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
 import java.net.ProtocolException;
 import java.net.SocketTimeoutException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
 import java.util.HashMap;
@@ -123,7 +125,7 @@ public class HTTPAgent {
      * @param setOauthToken  A boolean to flag whether to set the OAuth2 bearer access token in the Authorization header of request.
      * @return HttpURLConnection Http connection to the OpenSRP server.
      */
-    private HttpURLConnection initializeHttp(String requestURLPath, boolean setOauthToken) throws IOException {
+    private HttpURLConnection initializeHttp(String requestURLPath, boolean setOauthToken) throws IOException, URISyntaxException {
 
         HttpURLConnection urlConnection = getHttpURLConnection(requestURLPath);
 
@@ -142,8 +144,9 @@ public class HTTPAgent {
     }
 
     @VisibleForTesting
-    protected HttpURLConnection getHttpURLConnection(String requestURLPath) throws IOException {
-        URL url = new URL(requestURLPath);
+    protected HttpURLConnection getHttpURLConnection(String requestURLPath) throws IOException, URISyntaxException {
+        URI inputURI = new URI(requestURLPath.replaceAll(" ", "%20"));
+        URL url = inputURI.normalize().toURL();
         return (HttpURLConnection) url.openConnection();
     }
 
@@ -163,18 +166,7 @@ public class HTTPAgent {
 
             return processResponse(urlConnection);
 
-        } catch (IOException ex) {
-            Timber.e(ex, "EXCEPTION %s", ex.toString());
-            return new Response<>(ResponseStatus.failure, null);
-        }
-    }
-    public Response<String> fetchWithoutAuth(String requestURLPath) {
-        HttpURLConnection urlConnection;
-        try {
-            urlConnection = initializeHttp(requestURLPath, false);
-            return processResponse(urlConnection);
-
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Timber.e(ex, "EXCEPTION %s", ex.toString());
             return new Response<>(ResponseStatus.failure, null);
         }
@@ -204,7 +196,7 @@ public class HTTPAgent {
 
             return processResponse(urlConnection);
 
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Timber.e(ex, "EXCEPTION: %s", ex.toString());
             return new Response<>(ResponseStatus.failure, null);
         }
@@ -212,7 +204,7 @@ public class HTTPAgent {
 
     @NonNull
     @VisibleForTesting
-    protected HttpURLConnection generatePostRequest(String postURLPath, String jsonPayload) throws IOException {
+    protected HttpURLConnection generatePostRequest(String postURLPath, String jsonPayload) throws IOException, URISyntaxException {
         HttpURLConnection urlConnection;
         urlConnection = initializeHttp(postURLPath, true);
 
@@ -285,7 +277,7 @@ public class HTTPAgent {
                 Timber.e("Bad response from Dristhi. Status code: %s username: %s using %s ", statusCode, userName, url);
                 loginResponse = UNKNOWN_RESPONSE;
             }
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Timber.e(e, "Failed to check credentials bad url %s", url);
             loginResponse = MALFORMED_URL;
         } catch (SocketTimeoutException e) {
@@ -326,7 +318,7 @@ public class HTTPAgent {
             }
             return processResponse(urlConnection);
 
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Timber.e(ex, "EXCEPTION %s", ex.toString());
             return new Response<>(ResponseStatus.failure, null);
         }
@@ -336,8 +328,9 @@ public class HTTPAgent {
     private Response<String> processResponse(HttpURLConnection urlConnection) {
         String responseString;
         String totalRecords;
+        int statusCode = -1;
         try {
-            int statusCode = urlConnection.getResponseCode();
+            statusCode = urlConnection.getResponseCode();
 
             InputStream inputStream = null;
 
@@ -366,7 +359,8 @@ public class HTTPAgent {
         } finally {
             closeConnection(urlConnection);
         }
-        return new Response<>(ResponseStatus.success, responseString).withTotalRecords(Utils.tryParseLong(totalRecords, 0));
+        return new Response<>(statusCode >= HttpStatus.SC_BAD_REQUEST ? ResponseStatus.failure : ResponseStatus.success, responseString)
+                .withTotalRecords(Utils.tryParseLong(totalRecords, 0));
     }
 
 
@@ -437,7 +431,7 @@ public class HTTPAgent {
             Timber.e(e, "Protocol exception %s", e.toString());
         } catch (SocketTimeoutException e) {
             Timber.e(e, "SocketTimeout %s %s", TIMEOUT, e.toString());
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Timber.e(e, "MalformedUrl %s %s", MALFORMED_URL, e.toString());
         } catch (IOException e) {
             Timber.e(e, "IOException %s %s", NO_INTERNET_CONNECTIVITY, e.toString());
@@ -647,7 +641,7 @@ public class HTTPAgent {
                 return new AccountResponse(statusCode, accountError);
 
             }
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Timber.e(e, "Failed to check credentials bad url %s", tokenEndpointURL);
             accountError = new AccountError(0, MALFORMED_URL.name());
 
@@ -734,7 +728,7 @@ public class HTTPAgent {
                 Timber.e("Bad response from Server. Status code: %s using %s ", statusCode, url);
                 loginResponse = UNKNOWN_RESPONSE;
             }
-        } catch (MalformedURLException e) {
+        } catch (MalformedURLException | URISyntaxException e) {
             Timber.e(e, "Failed to check credentials bad url %s", url);
             loginResponse = MALFORMED_URL;
         } catch (SocketTimeoutException e) {
@@ -830,7 +824,7 @@ public class HTTPAgent {
                 return new Response<DownloadStatus>(ResponseStatus.failure, DownloadStatus.failedDownloaded);
             }
 
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Timber.d(e, "DownloadFormService");
             return new Response<DownloadStatus>(ResponseStatus.success, DownloadStatus.failedDownloaded);
         } finally {
@@ -929,7 +923,7 @@ public class HTTPAgent {
                 return false;
             }
 
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
 
             Timber.e(e);
 
@@ -981,7 +975,7 @@ public class HTTPAgent {
                 Timber.i("User is Authorized");
             }
 
-        } catch (IOException e) {
+        } catch (IOException | URISyntaxException e) {
             Timber.e(e);
         } finally {
 
@@ -1017,7 +1011,7 @@ public class HTTPAgent {
                 return gson.fromJson(responseString, AccountConfiguration.class);
             }
 
-        } catch (IOException e) {
+        } catch (Exception e) {
             Timber.e(e);
         } finally {
 
